my first commit on the glo app

--- a/index.html
+++ b/index.html
@@ -420,6 +420,163 @@
           </section>
         </section>
       </section>
+      <section class="backClip">
+        <section class="clip">
+          <section class="gloworld-shop">
+            <h1>GLOWORLD SHOP</h1>
+            <p>
+              Enjoy great SIM and data plan deals and special offers <br />
+              bundled with any smartphone of your choice at any <br />
+              Gloworld Shop.
+            </p>
+            <button type="submit" class="view-all">VIEW ALL PRODUCTS</button>
+          </section>
+          <section class="empty"></section>
+        </section>
+      </section>
+      <section class="findStore">
+        <h2>FIND A STORE</h2>
+        <p>
+          Input your location and see the Gloworld or GloZone Shop nearest to
+          you
+        </p>
+      </section>
+      <section class="gloTV">
+        <section class="tv container">
+          <figure>
+            <img src="./images/glo-tv-logo.png" alt="glo-tv" />
+          </figure>
+          <p>
+            Enjoy unlimited access to movies and TV shows online <br />
+            or stream right to your PC, mobile or tablet.
+          </p>
+          <button type="submit">WATCH NOW</button>
+        </section>
+      </section>
+      <section class="latestNews container">
+        <section class="news">
+          <h2>LATEST NEWS</h2>
+          <p>
+            Get to know the latest news from Glo, ranging from our products and
+            services to our growth <br />
+            over the last decade.
+          </p>
+        </section>
+        <section class="gallery">
+          <div class="galery-content">
+            <span>
+              <img src="./images/mid-1.png" alt="win-image" />
+            </span>
+            <div class="date">
+              <h3>
+                Why you should <br />
+                switch to 4G <br />
+                LTE Advanced Network
+              </h3>
+              <h5>23 June, 2023</h5>
+            </div>
+          </div>
+          <div class="galery-content">
+            <span>
+              <img src="./images/mid-2.png" alt="win-image" />
+            </span>
+            <div class="date">
+              <h3>
+                President Buhari <br />
+                Celebrates Mike <br />
+                LTE Advanced Network
+              </h3>
+              <h5>28 April, 2023</h5>
+            </div>
+          </div>
+          <div class="galery-content">
+            <span>
+              <img src="./images/mid-2.png" alt="win-image" />
+            </span>
+            <div class="date">
+              <h3>
+                After 3Hours of <br />
+                doubting, Glo promo House<br />
+                winner turns up to claim his house
+              </h3>
+              <h5>20 Jan, 2023</h5>
+            </div>
+          </div>
+        </section>
+        <button type="submit">SEE ALL</button>
+      </section>
+      <section class="cafe">
+        <h2>
+          GLO CAFE - Where it all <br />
+          Goes Down
+        </h2>
+        <p>
+          Glo Cafe app is a one-stop destination for managing your <br />
+          Globacom account, bill payments, mobile recharges and <br />
+          entertainment. The Glo Cafe App gives you the power to manage <br />
+          all your connections and services through one application
+        </p>
+        <figure>
+          <img src="./images/appstore.png" alt="apple Store" />
+          <img src="./images/playstore.png" alt="playstore" />
+        </figure>
+      </section>
     </main>
+    <footer class="footer">
+      <section class="first">
+        <section class="services container">
+          <div class="offering">
+            <h3> OUR OFFERING </h3>
+            <hr>
+            <a href="#"> Voice Plans </a>
+            <a href="#"> Data Plans </a>
+            <a href="#">iGloWorld</a>
+            <a href="#"> Products and Services</a>
+            <a href="#"> Mobile Money</a>
+          </div>
+          <div class="offering">
+            <h3> OUR OFFERING </h3>
+            <hr>
+            <a href="#"> Voice Plans </a>
+            <a href="#"> Data Plans </a>
+            <a href="#">iGloWorld</a>
+            <a href="#"> Products and Services</a>
+            <a href="#"> Mobile Money</a>
+          </div>
+          <div class="offering">
+            <h3> OUR OFFERING </h3>
+            <hr>
+            <a href="#"> Voice Plans </a>
+            <a href="#"> Data Plans </a>
+            <a href="#">iGloWorld</a>
+            <a href="#"> Products and Services</a>
+            <a href="#"> Mobile Money</a>
+          </div>
+          <div class="offering">
+            <h3> OUR OFFERING </h3>
+            <hr>
+            <a href="#"> Voice Plans </a>
+            <a href="#"> Data Plans </a>
+            <a href="#">iGloWorld</a>
+            <a href="#"> Products and Services</a>
+            <a href="#"> Mobile Money</a>
+          </div>
+          <div class="offering"> 
+          <h3> OUR OFFERING </h3>
+          <hr>
+          <a href="#"> Voice Plans </a>
+          <a href="#"> Data Plans </a>
+          <a href="#">iGloWorld</a>
+          <a href="#"> Products and Services</a>
+          <a href="#"> Mobile Money</a>
+          </div>
+        </section>
+        
+        <div></div>
+      </section>
+      <section class="second">
+        
+      </section>
+    </footer>
   </body>
 </html>
